* Small adjustments based on reviewer comments