@@ -73,8 +73,8 @@ public class FileResource {
     private final UserRepository userRepository;
 
     // NOTE: this list has to be the same as in file-uploader.service.ts
-    private final List<String> allowedFileExtensions = new ArrayList<>(Arrays.asList("png", "jpg", "jpeg", "svg", "pdf", "zip", "odt", "ods", "odp", "odg", "odf", "doc", "docx",
-            "csv", "xls", "xlsx", "ppt", "pptx", "pages", "rtf", "pages-tef", "numbers", "key"));
+    private final List<String> allowedFileExtensions = List.of("png", "jpg", "jpeg", "svg", "pdf", "zip", "doc", "docx", "csv", "xls", "xlsx", "ppt", "pptx", "pages", "rtf",
+            "pages-tef", "numbers", "key", "odt", "ods", "odp", "odg", "odf");
 
     public void addAllowedFileExtension(String fileExtension) {
         this.allowedFileExtensions.add(fileExtension);
